--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-draft-wysiwyg": "^1.14.5",
+		"react-quill": "^1.3.5",
 		"reactstrap": "^8.9.0",
 		"zustand": "^3.3.2"
 	},
