--- a/package.json
+++ b/package.json
@@ -8,20 +8,17 @@
 		"start": "next start"
 	},
 	"dependencies": {
-		"@material-ui/core": "^4.11.3",
-		"@material-ui/lab": "^4.0.0-alpha.57",
 		"axios": "^0.21.1",
 		"bcryptjs": "^2.4.3",
 		"bootstrap": "^4.6.0",
 		"draft-js": "^0.11.7",
-		"draft-js-wysiwyg": "^1.0.14",
+		"isomorphic-unfetch": "^3.1.0",
 		"jsonwebtoken": "^8.5.1",
 		"link-preview-js": "^2.1.6",
 		"mongoose": "^5.11.17",
 		"next": "10.0.7",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
-		"react-draft-wysiwyg": "^1.14.5",
 		"react-quill": "^1.3.5",
 		"reactstrap": "^8.9.0",
 		"zustand": "^3.3.2"
